--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
 html,
 body {
   box-sizing: border-box;
@@ -6,33 +7,31 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  font-family: "Patrick Hand";
 }
 #header {
   font-size: 48px;
-  color: white;
 }
 button {
   height: 40px;
   width: 150px;
-  font-size: 18px;
+  font-size: 24px;
   background-color: #ff717e;
   border-color: #ff717e;
   border-radius: 10px;
   padding: auto;
   margin: 50px auto 20px auto;
+  font-family: inherit;
 }
 #container {
   display: grid;
   height: 500px;
   width: 500px;
-  background-color: white;
+  background-color: white !important;
   border: solid #00ff00;
   border-radius: 1px;
+  cursor: crosshair;
 }
-#container div {
-}
-.hov {
-  background-color: #ff717e;
-  border: ;
-  border-radius: 1px;
+.rainbow {
+  font-size: 24px;
 }
