--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ button {
   display: flex;
   gap: 50px;
 }
+.instructions {
+  margin-top: 24px;
+  font-size: 24px;
+}
 #container {
   display: grid;
   height: 500px;
