--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Global Variables*/
 @import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
 html,
 body {
@@ -9,9 +10,16 @@ body {
   justify-content: space-around;
   font-family: "Patrick Hand";
 }
+/* Header*/
 #header {
   font-size: 48px;
 }
+/* instructions down the header*/
+.instructions {
+  margin-top: 24px;
+  font-size: 24px;
+}
+/* Buttons*/
 button {
   height: 40px;
   width: 150px;
@@ -27,10 +35,11 @@ button {
   display: flex;
   gap: 50px;
 }
-.instructions {
-  margin-top: 24px;
+/* Rainbow Checkbox*/
+.rainbow {
   font-size: 24px;
 }
+/* Grid Conatiner*/
 #container {
   display: grid;
   height: 500px;
@@ -39,7 +48,4 @@ button {
   border: solid #00ff00;
   border-radius: 1px;
   cursor: crosshair;
-}
-.rainbow {
-  font-size: 24px;
 }
